# llm-workflow

./: .gitignore  LICENSE  Readme.md  cabal.project  llm-workflow.cabal  model-catalog.json
app/: Main.hs  Wf1.hs
src/LLM/: Workflow.hs
src/LLM/Workflow/: BBEngine.hs  Blackboard.hs  ToolUtils.hs  Types.hs  Utils.hs  Workflow.hs
test/: BlackboardSpec.hs  Main.hs
