cabal-version:      3.0

name:               llm-workflow

version:            0.1.0.0

synopsis:           A simple LLM workflow library

description:        A simple LLM workflow library

license:            BSD-3-Clause

license-file:       LICENSE

author:             Daniel van den Eijkel

maintainer:         1515314+aische@users.noreply.github.com

category:           unknown
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-- extra-doc-files:    CHANGELOG.md

common opts
    default-language: GHC2021
    default-extensions:
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DerivingStrategies
        DerivingVia
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        DuplicateRecordFields
        NoFieldSelectors
        StrictData
        GADTs
        TypeFamilies
        ScopedTypeVariables
    ghc-options: 
        -Wall 
        -Wunused-imports
        -Werror=missing-fields

library
    import: opts
    exposed-modules:

        LLM.Workflow
        LLM.Workflow.BBEngine
        LLM.Workflow.Blackboard
        LLM.Workflow.Types
        LLM.Workflow.Workflow
        LLM.Workflow.ToolUtils
        LLM.Workflow.Utils

    other-modules:
    hs-source-dirs:     src
    build-depends:
        aeson          >=2.0   && <2.3,
        aeson-pretty   >=0.8   && <0.9,
        autodocodec    >=0.5 && < 0.6,
        autodocodec-schema >=0.2 && <0.3,
        base           ^>=4.18,
        bytestring     >=0.11  && <0.12,
        containers     ^>=0.6.7,
        directory      >=1.3   && <1.4,
        dotenv         >=0.9   && <0.13,
        filepath       >=1.4   && <1.6,
        heptapod       >=1.1   && <1.2,
        http-client    >=0.7   && <0.8,
        http-types     >=0.12  && <0.13,
        lens           >=5.3 && <5.4,
        mtl            >=2.3   && <2.4,
        req            >=3.13.4 && <3.14,
        retry          >=0.9   && <0.10,
        text           >=1.2   && <2.2,
        time           >=1.11  && <1.15,
        unordered-containers >=0.2 && < 0.3,
        uuid-types     >=1.0   && <1.1,
        vector         >=0.13,
        llm-simple,

executable llm-workflow
    import: opts
    main-is:          Main.hs
    other-modules:    Wf1
    hs-source-dirs:   app
    build-depends:
        aeson          >=2.0   && <2.3,
        autodocodec    >=0.5 && < 0.6,
        autodocodec-schema >=0.2 && <0.3,
        base           ^>=4.18,
        bytestring     >=0.11 && <0.12,
        containers     ^>=0.6.7,
        dotenv         >=0.9   && <0.13,
        directory      >=1.3   && <1.4,
        filepath       >=1.4   && <1.6,
        heptapod       >=1.1   && <1.2,
        llm-simple,
        mtl            >=2.3   && <2.4,
        optparse-applicative >= 0.16 && <0.19,
        retry          >=0.9   && <0.10,
        text           >=1.2   && <2.2,
        llm-simple,
        llm-workflow,

test-suite blackboard-spec
    import: opts
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: BlackboardSpec
    hs-source-dirs: test
    build-depends:
        base           ^>=4.18,
        containers     ^>=0.6.7,
        tasty          >=1.4   && <1.6,
        tasty-hunit    >=0.10  && <0.11,
        text           >=1.2   && <2.2,
        uuid-types     >=1.0   && <1.1,
        llm-simple,
        llm-workflow,
